--- a/index.html
+++ b/index.html
@@ -94,23 +94,38 @@
 
 
 <script>
-    function arrayToTable(tableData) {
-        var table = $('<table  id="sample1"></table>');
-        $(tableData).each(function (i, rowData) {
-            var row = $('<tr></tr>');
-            $(rowData).each(function (j, cellData) {
-                row.append($('<td>'+cellData+'</td>'));
-            });
-            table.append(row);
-        });
-        return table;
-    }
-    $.ajax({
-        type: "GET",
-        url: "data/Sample_Data.csv",
-        success: function (data) {
-            $('#sample1').append(arrayToTable(Papa.parse(data).data));
-        }
+   $(document).ready(function(){
+       function arrayToTable(tableData) {
+           var table = $('<table></table>')
+           var tbody = $('<tbody></tbody>');
+           var thead = $('<thead></thead>');
+           $(tableData).each(function (i, rowData) {
+               if(i === 0) {
+                   var row = $('<tr></tr>');
+                   $(rowData).each(function (j, cellData) {
+                       row.append($('<th>'+cellData+'</th>'));
+                   });
+                   thead.append(row);
+               } else {
+                   var row = $('<tr></tr>');
+                   $(rowData).each(function (j, cellData) {
+                       row.append($('<td>'+cellData+'</td>'));
+                   });
+                   tbody.append(row);
+               }
+           });
+           table.append(thead);
+           table.append(tbody);
+           return table;
+       }
+       $.ajax({
+           type: "GET",
+           url: "data/unemployment.csv",
+           success: function (data) {
+               $('body').append(arrayToTable(Papa.parse(data).data));
+           }
+       });
+
     }).done(function(){
             $('#sample1').DataTable( {
         dom: 'Bfrtip',
@@ -135,3 +150,4 @@
 </body>
 
 </html>
+
